# hello-plutarch

./: .gitignore  README.md  cabal.project  flake.nix  hello-plutarch.cabal  hie.yaml  package.yaml
.github/environments/: cabal-flake.nix
.github/workflows/: cabal.yaml  haskell.nix.yaml  hpack-sync.yaml  template.yaml
exe/: Main.hs
src/: Lib.hs
template/: .gitignore  README.md  flake.nix
