cabal-version: 3.0

name:           hello-plutarch
version:        0.0.1
build-type:     Simple

library
  exposed-modules:
      Lib
  other-modules:
      Paths_hello_plutarch
  hs-source-dirs:
      src
  build-depends:
      base
    , bytestring
    , text
  default-language: Haskell2010

executable hello-plutarch
  main-is: Main.hs
  other-modules:
      Paths_hello_plutarch
  hs-source-dirs:
      exe
  build-depends:
      base
    , bytestring
    , hello-plutarch
    , text
  default-language: Haskell2010
